syntax = "proto3";

option java_package = "com.android.wildex.datastore";
option java_multiple_files = true;

message UserAnimalsCacheStorage {
    map<string, UserAnimalsProto> user_animals = 1;
}

message UserAnimalsProto {
    string user_id = 1;
    repeated string animals_id = 2;
    int32 animals_count = 3;
    int64 last_updated = 4;
}